apps/production/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
spec:
  replicas: 3
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
      - name: it-tools
        image: registry-proxy.local.hejsan.xyz/corentinth/it-tools:2023.12.21-5ed3693
        resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
      imagePullSecrets:
        - name: container-registry-proxy-secret
